objects/Answer__c.object
<CustomObject>
    <description>Case# 00615287 - This object will store answers for survey questions - Arokia Nathan</description>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Case# 00615287 - This field will store answer - Arokia Nathan</description>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Choice__c</fullName>
        <description>Case# 00615287 - This field will store choice like 1,2,3... A,B,C... - Arokia Nathan</description>
        <label>Choice</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Case# 00615287 - This field is used for data loading - Arokia Nathan</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Case# 00615287 - This field is question reference field - Arokia Nathan</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Case 00628930 - If a question has 5 possible answers, from &quot;Strongly Disagree&quot; to &quot;Strongly Agree&quot;, we might assign them scores of 1, 2, 3, 4, 5 - Arokia Nathan</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Answer#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>